Update Dockerfile for rendering

--- a/apache-config.conf
+++ b/apache-config.conf
@@ -7,8 +7,18 @@
         AllowOverride All
         Require all granted
         DirectoryIndex index.php index.html
+        
+        # Fallback to index.php if file doesn't exist
+        FallbackResource /index.php
     </Directory>
+
+    # Additional security headers
+    <IfModule mod_headers.c>
+        Header set X-Content-Type-Options "nosniff"
+        Header set X-Frame-Options "SAMEORIGIN"
+    </IfModule>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+
