--- a/apache-config.conf
+++ b/apache-config.conf
@@ -1,9 +1,10 @@
 <VirtualHost *:80>
     ServerName maarat-complaints.onrender.com
+    ServerAdmin webmaster@localhost
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
-        Options -Indexes +FollowSymLinks
+        Options -Indexes +FollowSymLinks -MultiViews
         AllowOverride All
         Require all granted
         DirectoryIndex index.php index.html
@@ -12,13 +13,25 @@
         FallbackResource /index.php
     </Directory>
 
+    # Explicitly allow access to index.php
+    <Files "index.php">
+        Require all granted
+    </Files>
+
+    # Allow .htaccess
+    <Files ".htaccess">
+        Require all granted
+    </Files>
+
     # Additional security headers
     <IfModule mod_headers.c>
         Header set X-Content-Type-Options "nosniff"
         Header set X-Frame-Options "SAMEORIGIN"
+        Header set X-XSS-Protection "1; mode=block"
     </IfModule>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+
 
