Fix deployment: remove nested .git, simplify Docker config

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,56 +1,19 @@
-# Git files
+# Git
 .git
+**/.git
 .gitignore
 .gitattributes
 
-# IDE files
+# IDE
 .idea
 .vscode
-.fleet
-.nova
-.zed
-.phpactor.json
-
-# Documentation
-README.md
-*.md
 
 # Tests
 tests
 phpunit.xml
-.phpunit.result.cache
-.phpunit.cache
 
-# Node modules (if any)
+# Node
 node_modules
 
-# Environment files (will be set by hosting)
-.env
-.env.backup
-.env.production
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-
-# Storage (will be created at runtime)
-storage/logs/*
-storage/framework/cache/*
-storage/framework/sessions/*
-storage/framework/views/*
-
-# Keep important storage directories structure
-!storage/logs/.gitignore
-!storage/framework/cache/.gitignore
-!storage/framework/sessions/.gitignore
-!storage/framework/views/.gitignore
-
-# Vendor (will be installed via composer)
-vendor
-
-# Build artifacts
-/public/build
-/public/hot
+# Docs
+README.md
