--- a/apache-config.conf
+++ b/apache-config.conf
@@ -3,8 +3,13 @@
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
+        Options +FollowSymLinks
         AllowOverride All
         Require all granted
+        DirectoryIndex index.php index.html
+        
+        # Fallback for Laravel routing
+        FallbackResource /index.php
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
