Fix Apache config to serve React frontend properly

--- a/apache-config.conf
+++ b/apache-config.conf
@@ -6,10 +6,7 @@
         Options +FollowSymLinks
         AllowOverride All
         Require all granted
-        DirectoryIndex index.php index.html
-        
-        # Fallback for Laravel routing
-        FallbackResource /index.php
+        DirectoryIndex index.html index.php
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
